# ouroboros

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.sh
.github/workflows/: build-wheels.yml
examples/: README.md  rust_extension_example.py
ferrous-utils/common/: Cargo.toml
ferrous-utils/common/benches/: crypto.rs
ferrous-utils/common/src/: crypto.rs  lib.rs  serialize.rs  types.rs
ferrous-utils/common/tests/: test_crypto.rs
ferrous-utils/sync/: Cargo.toml
ferrous-utils/sync/src/: lib.rs
ferrous-utils/sync/src/network/: block_sync.rs  header_sync.rs  messages.rs  mod.rs  peer.rs  peer_manager.rs
ferrous-utils/sync/src/storage/: db.rs  db_tests.rs  mod.rs  schema.rs
ferrous-utils/sync/src/validate/: block.rs  header.rs  mod.rs  pow.rs  script.rs  transaction.rs
ferrous-utils/sync/tests/: test_p2p_messages.rs  test_p2p_wireshark.rs
ferrous-utils/sync/tests/integration/: test_validation.rs
scripts/: download_test_data.sh  validate_rust_impl.sh
src/ouroboros/: __init__.py  block_sync.py  cli.py  config.py  database.py  mempool.py  node.py  p2p.py  p2p_messages.py  peer.py  rpc.py  script.py  sync_manager.py  validation.py  wallet.py
src/ouroboros/tests/: test_block_deserialize.py  test_block_storage.py  test_config.py  test_ecdsa_verification.py  test_median_time.py  test_reorg_utxo_restoration.py  test_rpc_methods.py  test_script_disassembly.py  test_script_execution.py  test_segwit.py  test_sync_manager.py  test_transaction_deserialize.py
