[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoin = { version = "0.32", features = ["serde"] }
bitcoin_hashes = "0.18"
secp256k1 = "0.31"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
primitive-types = { version = "0.13", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
