[package]
name = "sync"
version.workspace = true
edition.workspace = true

[lib]
name = "sync"
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
pyo3 = { version = "0.27", features = ["auto-initialize"] }
tokio = { version = "1", features = ["full"] }
rocksdb = "0.24"
bitcoin = { version = "0.32", features = ["serde"] }
bitcoin_hashes = "0.18"
secp256k1 = "0.31"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
num_cpus = "1.16"
primitive-types = { version = "0.13", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tempdir = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
hex = "0.4"
